# django-password-rotate

./: CHANGELOG.md  LICENSE  Makefile  README.md  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  test.py
.github/workflows/: pypi.yaml  tests.yaml
password_rotate/: __init__.py  admin.py  apps.py  forms.py  managers.py  middleware.py  models.py  signals.py  urls.py  util.py  utils.py  validators.py  views.py
password_rotate/migrations/: 0001_initial.py
password_rotate/tests/: settings.py  test_util.py  urls.py
