[metadata]
name = django-password-rotate
version = 0.1
description = Django app for forcing password rotation
long_description = file:README.md
url = https://github.com/alexandriagroup/django-password-rotate
author = Taurus Olson
author_email = taurusolson@gmail.com
license = BSD
include_package_data = True
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 4.2
    humanize == 4.7.0
